refactored, reformatted, cleaned up